--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ html,body{
     height: 100%;
     width: 100%;
     background-color: red;
-    background-image: url(/bg\ image.png);
+    background-image: url(bg\ image.png);
     background-position: center;
     background-size: cover;
 }
